tests/invalid/any_passed_as_ground.err_exp2
any_passed_as_ground.m:029: In clause for `main(di, uo)':
any_passed_as_ground.m:029:   in call to predicate `list.member'/2:
any_passed_as_ground.m:029:   mode error: arguments `TypeInfo_12, V_10, Xs'
any_passed_as_ground.m:029:   have the following insts:
any_passed_as_ground.m:029:     bound(
any_passed_as_ground.m:029:       type_info(
any_passed_as_ground.m:029:         bound(
any_passed_as_ground.m:029:           <type_ctor_info for pair.pair/2>
any_passed_as_ground.m:029:         ),
any_passed_as_ground.m:029:         bound(
any_passed_as_ground.m:029:           <type_ctor_info for .int/0>
any_passed_as_ground.m:029:         ),
any_passed_as_ground.m:029:         bound(
any_passed_as_ground.m:029:           <type_ctor_info for any_passed_as_ground.st/0>
any_passed_as_ground.m:029:         )
any_passed_as_ground.m:029:       )
any_passed_as_ground.m:029:     ),
any_passed_as_ground.m:029:     free,
any_passed_as_ground.m:029:     any
any_passed_as_ground.m:029:   which does not match any of the modes for
any_passed_as_ground.m:029:   predicate `list.member'/2.
For more information, recompile with `-E'.
